--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ aiosignal==1.3.2
 aiosqlite==0.21.0
 alembic==1.14.1
 annotated-types==0.7.0
+APScheduler==3.11.0
 attrs==25.1.0
 cachetools==5.5.2
 certifi==2025.1.31
@@ -37,4 +38,5 @@ python-dotenv==1.0.1
 six==1.17.0
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
+tzlocal==5.3.1
 yarl==1.18.3
