--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ alembic==1.14.1
 annotated-types==0.7.0
 APScheduler==3.11.0
 attrs==25.1.0
+babel==2.17.0
 cachetools==5.5.2
 certifi==2025.1.31
 contourpy==1.3.1
@@ -17,12 +18,14 @@ fonttools==4.56.0
 frozenlist==1.5.0
 greenlet==3.1.1
 idna==3.10
+inflect==7.5.0
 Jinja2==3.1.5
 kiwisolver==1.4.8
 magic-filter==1.0.12
 Mako==1.3.9
 MarkupSafe==3.0.2
 matplotlib==3.10.1
+more-itertools==10.6.0
 multidict==6.1.0
 numpy==2.2.3
 packaging==24.2
@@ -35,8 +38,11 @@ pymodbus==3.8.6
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+redis==5.2.1
 six==1.17.0
+sqlacodegen==3.0.0
 SQLAlchemy==2.0.38
+typeguard==4.4.2
 typing_extensions==4.12.2
 tzlocal==5.3.1
 yarl==1.18.3
